fixed disappearing text in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1424,7 +1424,7 @@ hr {
 }
 
 .footer a:hover {
-  color: var(--color-white);
+  color: var(--text-dark-primary);
 }
 
 .footer-grid {
